--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   telegram-bot:
-    build: .
+    build:
+      dockerfile: dockerfile
     container_name: RobostationBot
     restart: unless-stopped
     env_file:
